--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,11 @@ table {
 
 /* CSS Reset above */
 
+/* Nav */
+nav {
+  background: red;
+}
+
 .hero {
   width: 100%;
   height: 25rem;
@@ -76,10 +81,10 @@ table {
 .user-info .person-container {
   position: absolute;
   top: -75px;
-  left: 50%;
+  left: 30px;
   width: 275px;
-  -webkit-transform: translatex(-50%);
-          transform: translatex(-50%);
+  /* -webkit-transform: translatex(-50%);
+          transform: translatex(-50%); */
   display: -webkit-box;
   display: flex;
   -webkit-box-orient: vertical;
@@ -113,13 +118,14 @@ table {
 
 .user-info .inner-container {
   display: -webkit-box;
-  display: flex;
+  /* display: flex;
   -webkit-box-pack: justify;
-          justify-content: space-between;
+          justify-content: space-between; */
 }
 .user-info .inner-container .left-container, .user-info .inner-container .right-container {
   display: -webkit-box;
   display: flex;
+  transform: translateX(30%);
 }
 .user-info .inner-container .left-container > *, .user-info .inner-container .right-container > * {
   margin-left: 1rem;
