--- a/src/index.css
+++ b/src/index.css
@@ -585,3 +585,76 @@ nav .page-nav-container a:last-of-type {
   font-family: 'Roboto', sans-serif;
 }
 
+/* Posts index page */
+
+.posts-inner-container {
+  width: 95%;
+  max-width: 725px;
+  margin: 3rem auto;
+}
+
+.post * {
+  font-family: 'Roboto', sans-serif;
+}
+
+.posts-inner-container .user-container {
+  text-align: left;
+}
+
+.posts-inner-container .user-container span {
+  color: #3b3b3b;
+}
+
+.posts-inner-container .post p {
+  text-align: left;
+  color: #5c5c5c;
+}
+
+.posts-inner-container .post-interaction-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.posts-inner-container .btns-container {
+  margin-bottom: 1rem;
+}
+
+.posts-inner-container span.commenter-name {
+  font-size: 1.05rem;
+  color: #3b3b3b;
+  font-weight: 400;
+  text-align: left;
+  width: 100%;
+  display: block;
+}
+
+.posts-inner-container span.commenter-name img {
+  width: 50px;
+  height: 50px;
+  display: inline-block;
+  margin-right: 1rem;
+}
+
+.posts-inner-container .btn-container {
+  margin-top: .5rem;
+  display: flex;
+}
+
+.posts-inner-container .btn-container button {
+  border: none;
+  padding: .5rem 1rem;
+  background: #9183FF;
+  border-radius: 5px;
+  color: #fff;
+  text-shadow: 1px 1px 3px rgba(0,0,0,.15);
+  margin-left: auto;
+}
+
+.posts-inner-container button:hover {
+  cursor: pointer;
+}
+
+.posts-inner-container input.newComment {
+  min-height: 35px;
+  width: 100%;
+}
