--- a/src/index.css
+++ b/src/index.css
@@ -88,13 +88,13 @@ nav .page-nav-container a {
   font-family: 'Roboto', sans-serif;
 }
 
-nav .page-nav-container a:first-of-type {
+nav .page-nav-container a {
   color: #fff;
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.25);
   margin-right: 2rem;
 }
 
-nav .page-nav-container a:last-of-type {
+nav .page-nav-container.logged-out a:last-of-type {
   color: #2E29FA;
   background: #fff;
   padding: .7rem 1.4rem;
